--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -4,4 +4,30 @@
         <!-- Customize your dark theme here. -->
         <!-- <item name="colorPrimary">@color/my_dark_primary</item> -->
     </style>
+
+
+
+    <style name="Theme.status_bar_clr" parent="Base.Theme.FinalCalciHide">
+
+
+        <!--        <item name="android:windowTranslucentStatus">true</item>-->
+        <item name="android:windowFullscreen">false</item>
+
+        <item name="android:fitsSystemWindows">false</item>
+        <item name="android:windowBackground">@color/status_bar</item>
+        <item name="android:statusBarColor">@color/status_bar</item>
+        <item name="android:windowLightStatusBar">false</item> <!-- For light icons -->
+
+
+        <!--        <item name="android:colorPrimary">@color/status_bar</item>-->
+        <item name="colorPrimaryDark">@color/status_bar</item>
+
+
+    </style>
+
+
+    <style name="Theme.FullScreen" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+
+    </style>
+
 </resources>
