--- a/app/src/main/res/layout/activity_images_hidden.xml
+++ b/app/src/main/res/layout/activity_images_hidden.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/root_activity_select_images"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:fitsSystemWindows="true"
@@ -54,8 +54,7 @@
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
         android:layout_margin="25dp"
-        android:background="@drawable/background_fab"
-        android:elevation="6dp">
+        android:background="@drawable/background_fab">
 
         <ImageView
             android:id="@+id/fab_icon"
@@ -66,8 +65,18 @@
 
     </FrameLayout>
 
+<FrameLayout
+    android:id="@+id/llllllll"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@color/Black"
+    android:visibility="gone"
+    android:layout_alignParentTop="true"
+    android:layout_alignParentBottom="true"
+    android:layout_alignParentStart="true"
+    android:layout_alignParentEnd="true">
 
-
+</FrameLayout>
 
     <include
         layout="@layout/animation"
