--- a/app/src/main/res/layout/activity_image_view_pager.xml
+++ b/app/src/main/res/layout/activity_image_view_pager.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/imageViewpager_root_view"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -16,14 +15,14 @@
         android:id="@+id/image_view_pager_toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp">
+        android:background="#80000000">
 
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
-            android:layout_marginTop="25dp">
+            android:layout_marginTop="25dp"
+            android:padding="5dp">
 
 
             <!-- Back Arrow -->
