--- a/app/src/main/res/layout/contextual_toolbar.xml
+++ b/app/src/main/res/layout/contextual_toolbar.xml
@@ -1,27 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/toolbar"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_gravity="top"
-    android:gravity="top"
-    android:layout_marginTop="5dp"
-    android:layout_marginStart="0dp"
-    android:orientation="vertical">
+    android:layout_marginTop="5dp">
 
 
-        <LinearLayout
+        <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:orientation="horizontal"
             android:padding="5dp">
-
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="left">
 
                 <ImageView
                     android:id="@+id/contextual_toolbar_cutt"
@@ -31,42 +20,35 @@
                     android:layout_marginStart="10dp"
                     android:src="@drawable/baseline_cancel_presentation_24" />
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="2"
-                android:gravity="center"
-                android:orientation="vertical">
+
 
                 <TextView
                     android:id="@+id/item_count_text"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    android:layout_toEndOf="@+id/contextual_toolbar_cutt"
                     android:padding="5dp"
-                    android:textColor="@android:color/white"
-                    android:textSize="18sp" />
+                    android:textColor="#fff"
+                    android:layout_centerVertical="true"
+                    android:layout_marginStart="14dp"
+                    android:textSize="20sp" />
 
-            </LinearLayout>
 
-            <LinearLayout
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:gravity="right">
 
                 <ImageView
                     android:id="@+id/contextual_toolbar_select_and_deselect_all"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_gravity="end"
+                    android:layout_marginEnd="5dp"
                     android:padding="5dp"
-                    android:layout_marginEnd="10dp"
+                    android:layout_centerVertical="true"
+                    android:layout_alignParentEnd="true"
                     android:src="@drawable/baseline_check_box_outline_blank_24" />
 
-            </LinearLayout>
-        </LinearLayout>
+        </RelativeLayout>
 
 
-</LinearLayout>
+</RelativeLayout>
