--- a/app/src/main/res/layout/animation.xml
+++ b/app/src/main/res/layout/animation.xml
@@ -20,6 +20,7 @@
             app:lottie_loop="false"
             app:lottie_rawRes="@raw/animation2"
             app:lottie_autoPlay="true"
+            android:visibility="gone"
             />
         
         <com.airbnb.lottie.LottieAnimationView
