--- a/app/src/main/res/layout/activity_image_view_pager.xml
+++ b/app/src/main/res/layout/activity_image_view_pager.xml
@@ -65,6 +65,17 @@
 
     </RelativeLayout>
 
+    <!-- Include Lottie Animations Layout -->
+    <FrameLayout
+        android:id="@+id/viewpager_animation_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+        <include
+            layout="@layout/animation"/>
+    </FrameLayout>
+
+
 
 </RelativeLayout>
 
