--- a/app/src/main/res/layout/activity_calculator.xml
+++ b/app/src/main/res/layout/activity_calculator.xml
@@ -8,75 +8,262 @@
     tools:context=".Activity.Calculator">
 
 
-
-    <!-- TODO: Only visible when setting password for first time -->
-    <TextView
-        android:id="@+id/textView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="10dp"
-        android:text="Create your Password"
-        android:visibility="gone"
-        android:textSize="25sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-
-    <!-- TODO: Only visible when setting password for first time -->
-    <TextView
-        android:id="@+id/textView2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
-        android:visibility="gone"
-        android:text="Enter 4 Digit passwor and then press '=' "
-        android:textSize="18sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-
-    <!-- TODO: Only visible when setting password for first time and take password in this and save to storage on btn_Equal click-->
-    <TextView
-        android:id="@+id/password_customTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:text="9 6 8 7 "
-        android:visibility="gone"
-        android:textColor="#000000"
-        android:textSize="25sp"
-        android:layout_marginTop="10dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView2" />
-
-
-
-    <TextView
-        android:id="@+id/dataTv"
+    <FrameLayout
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="viewEnd"
-        android:layout_marginEnd="12dp"
-        android:textSize="29sp"
-        app:layout_constraintBottom_toTopOf="@+id/resultTv"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
-
-    <TextView
-        android:id="@+id/resultTv"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textAlignment="viewEnd"
-        android:layout_marginEnd="12dp"
-        android:textColor="#555558"
-        android:visibility="gone"
-        android:textSize="29sp"
+        android:layout_height="0dp"
         app:layout_constraintBottom_toTopOf="@id/limebar"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintTop_toTopOf="parent">
+
+        <LinearLayout
+            android:id="@+id/calculator_linear_new_password"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/tvPassTitle"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="16dp"
+                android:layout_marginBottom="8dp"
+                android:background="#00000000"
+                android:editable="false"
+                android:gravity="center"
+                android:inputType="none"
+                android:lines="1"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
+                android:text="Create New Password"
+                android:textColor="@color/Black"
+                android:textIsSelectable="true"
+                android:textSize="20sp"
+                android:textStyle="bold" />
+
+<!--            Todo:  when user one time enter the password in (calculator_linear_password_feild)  set text confirm 4 digit password and press = in tvPassDetail-->
+
+            <TextView
+                android:id="@+id/tvPassDetail"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:background="#00000000"
+                android:editable="false"
+                android:gravity="center"
+                android:inputType="none"
+                android:maxLines="2"
+                android:paddingLeft="24dp"
+                android:paddingRight="24dp"
+                android:text="Enter a 4 digit password and press = "
+                android:textColor="@color/Black"
+                android:textIsSelectable="true"
+                android:textSize="15sp" />
+
+            <LinearLayout
+                android:id="@+id/calculator_linear_password_feild"
+                android:layout_width="210dp"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="8dp"
+                android:orientation="horizontal">
+
+<!--                Todo : here below 4 linear layouts (EditText) works as the 4 digit password -->
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/Passtxt1"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="#00000000"
+                        android:editable="false"
+                        android:gravity="center"
+                        android:inputType="numberPassword"
+                        android:textColor="@color/Black"
+                        android:textColorHint="@color/Black"
+                        android:textIsSelectable="true"
+                        android:textSize="30sp" />
+
+                    <View
+                        android:layout_width="24dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:background="@color/Black" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/Passtxt2"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="#00000000"
+                        android:editable="false"
+                        android:gravity="center"
+                        android:inputType="numberPassword"
+                        android:textColor="@color/Black"
+                        android:textColorHint="@color/Black"
+                        android:textIsSelectable="true"
+                        android:textSize="30sp" />
+
+                    <View
+                        android:layout_width="24dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:background="@color/Black" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/Passtxt3"
+                        android:layout_width="49dp"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="#00000000"
+                        android:editable="false"
+                        android:gravity="center"
+                        android:inputType="numberPassword"
+                        android:textColor="@color/Black"
+                        android:textColorHint="@color/Black"
+                        android:textIsSelectable="true"
+                        android:textSize="30sp" />
+
+                    <View
+                        android:layout_width="24dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:background="@color/Black" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_weight="1"
+                    android:gravity="center"
+                    android:orientation="vertical">
+
+                    <EditText
+                        android:id="@+id/Passtxt4"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center"
+                        android:background="#00000000"
+                        android:editable="false"
+                        android:gravity="center"
+                        android:inputType="numberPassword"
+                        android:textColor="@color/Black"
+                        android:textColorHint="@color/Black"
+                        android:textIsSelectable="true"
+                        android:textSize="30sp" />
+
+                    <View
+                        android:layout_width="24dp"
+                        android:layout_height="2dp"
+                        android:layout_gravity="center"
+                        android:background="@color/Black" />
+                </LinearLayout>
+            </LinearLayout>
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/btResetPassword"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="48dp"
+                android:foreground="?attr/selectableItemBackground"
+                android:onClick="onClick"
+                app:cardBackgroundColor="@color/white"
+                app:cardCornerRadius="20dp">
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:minWidth="64dp"
+                    android:orientation="horizontal"
+                    android:paddingLeft="8dp"
+                    android:paddingRight="4dp">
+
+                    <ImageView
+                        android:layout_width="40dp"
+                        android:layout_height="40dp"
+                        android:padding="8dp"
+                        android:src="@drawable/reel"
+                        app:tint="@color/white" />
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="40dp"
+                        android:layout_marginRight="16dp"
+                        android:gravity="center"
+                        android:text="Reset"
+                        android:textAllCaps="true"
+                        android:textColor="@color/Black"
+                        android:textStyle="bold" />
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
+        </LinearLayout>
+
+
+        <RelativeLayout
+            android:id="@+id/calculator_relative_calculation_txt"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/limebar"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_gravity="bottom|center_horizontal">
+
+
+            <TextView
+                android:id="@+id/dataTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="12dp"
+                android:textAlignment="viewEnd"
+                android:textSize="29sp"
+                app:layout_constraintBottom_toTopOf="@+id/resultTv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+            <TextView
+                android:id="@+id/resultTv"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="12dp"
+                android:textAlignment="viewEnd"
+                android:textColor="#555558"
+                android:textSize="29sp"
+                android:visibility="gone"
+                android:layout_below="@id/dataTv"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" />
+
+        </RelativeLayout>
+
+
+    </FrameLayout>
+
 
     <View
         android:id="@+id/limebar"
