--- a/app/src/main/res/layout/activity_intruder.xml
+++ b/app/src/main/res/layout/activity_intruder.xml
@@ -36,7 +36,7 @@
 
                 <!-- Title -->
                 <TextView
-                    android:id="@+id/main_toolbar_title"
+                    android:id="@+id/intruder_main_toolbar_title"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Intruder Photos"
@@ -116,7 +116,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="Intruder Selfie"
-                        android:layout_toStartOf="@id/activity_intruder_radiobtn"
+                        android:layout_toStartOf="@id/activity_intruder_switch"
                         android:textSize="22sp"
                         android:layout_toEndOf="@id/activity_intruder_intruder_image"
                         android:layout_marginStart="8dp" />
@@ -126,13 +126,13 @@
                         android:layout_height="wrap_content"
                         android:text="Take picture of intruders when wrong password"
                         android:textSize="16sp"
-                        android:layout_toStartOf="@id/activity_intruder_radiobtn"
+                        android:layout_toStartOf="@id/activity_intruder_switch"
                         android:layout_below="@id/activity_intruder_txt_Intdruder_Selfie"
                         android:layout_toEndOf="@id/activity_intruder_intruder_image"
                         android:layout_marginStart="8dp" />
 
-                    <RadioButton
-                        android:id="@+id/activity_intruder_radiobtn"
+                    <androidx.appcompat.widget.SwitchCompat
+                        android:id="@+id/activity_intruder_switch"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_alignParentEnd="true"
